Tue Feb  1 08:54:46 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Delete X-Virus-Status in clamfi_eom not in
				clamfi_header. Patch by Jef Poskanzer
				<jef@acme.com>
			X-Virus-Status now says that virus that it's infected
				with. Suggestion by "Hank Beatty"
				<hbeatty@starband.net>

Tue Feb  1 03:46:22 CET 2005 (tk)
---------------------------------
  * libclamav/readdb.c: s/cl_strerr/cl_strerror

Mon Jan 31 19:15:48 CET 2005 (tk)
---------------------------------
  * libclamav/readdb.c: update error message

Mon Jan 31 11:05:20 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Empty lines should the end of the headers,
				but some base64 decoders, e.g. uudeview, are
				broken and will handle this type of entry,
				decoding the base64 content that's after the
				text that's after the header

Sun Jan 30 15:18:02 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	SESSION is on now by default, to test clamd
			PACKADDR is now uses unsinged to remove warning on
				Sun's C compiler, patch by
				"Dugal James P." <jpd@louisiana.edu>
			Don't check compatibility with sendmail.cf if sendmail
				is running on a different machine

Fri Jan 28 22:44:17 CET 2005 (tk)
---------------------------------
  * docs/MacOSX: updated (Dale Enterprise L.L.C)

Fri Jan 28 08:51:08 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Some error messages still talked about --internal
			Scanmail not set warning is now only given if
				DisableDefaultScanOptions is set

Thu Jan 27 20:22:50 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Some Worm.Mydoom.Gen-unp were not caught

Thu Jan 27 14:11:13 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan sendmail queue df* files

Thu Jan 27 10:55:35 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Don't scan emails intended for the --quarantine address,